--- a/service/src/main/resources/templates/user/registration.html
+++ b/service/src/main/resources/templates/user/registration.html
@@ -2,37 +2,36 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>User</title>
+    <title>Registration</title>
 </head>
 <body>
-<form th:action="@{/users/{userId}/update(userId=${user.id})}" method="post" enctype="multipart/form-data">
+<form action="/users" enctype="multipart/form-data" method="post">
     <label for="username">Username
         <input id="username" type="text" name="username" th:value="${user.username}">
     </label><br>
     <label for="fullname">FullName
         <input id="fullname" type="text" name="fullName" th:value="${user.fullName}">
-    </label><br>
-    <label for="phoneNumber">Phone number
+    </label>
+    <label for="phoneNumber">FullName
         <input id="phoneNumber" type="text" name="phoneNumber" th:value="${user.phoneNumber}">
-    </label><br>
-    <label for="address">Address
+    </label>
+    <label for="password">FullName
+        <input id="password" type="password" name="password" th:value="${user.password}">
+    </label>
+    <label for="address">FullName
         <input id="address" type="text" name="address" th:value="${user.address}">
-    </label><br>
-    <div th:if="${user.image}">
-        <img th:src="@{/api/v1/users/{userId}/avatar(userId=${user.id})}" alt="User image">
-    </div>
+    </label>
     <div th:each="role : ${roles}">
         <input th:id="${role}" name="role" type="radio" th:value="${role}" th:checked="${user.role == role}">
         <label th:for="${role}" th:text="${role}">Role name</label>
     </div>
     <label for="image">Image
-        <input type="file" id="image" name="image">
+        <input id="image" type="file" name="image">
     </label>
-    <button type="submit">Update</button>
+    <button type="submit">Submit</button>
 </form>
-
-<form th:action="@{/users/{userId}/delete(userId=${user.id})}" method="post">
-    <button type="submit" th:if="${user.role.name() == 'ADMIN'}">Remove</button>
-</form>
+<div th:if="${errors}">
+    <p th:each="error: ${errors}" th:text="${error.getDefaultMessage}">Error message</p>
+</div>
 </body>
 </html>
