--- a/service/src/main/resources/templates/user/users.html
+++ b/service/src/main/resources/templates/user/users.html
@@ -5,17 +5,26 @@
     <title>Users</title>
 </head>
 <body>
-
+<div th:insert="~{fragment.html::header}"></div>
 <form action="/users">
     <label for="username">Username
-        <input id="username" type="text" name="username">
+        <input id="username" type="text" name="username" th:value="${filter.username}">
     </label>
     <label for="fullName">Full Name
-        <input id="fullName" type="text" name="fullName">
+        <input id="fullName" type="text" name="fullName" th:value="${filter.fullName}">
     </label>
+
+    <div>
+        <label for="page">Page
+            <input id="page" type="number" name="page" th:value="${users.metaData.page}">
+        </label>
+        <label for="size">Size
+            <input id="size" type="text" name="size" th:value="${users.metaData.size}">
+        </label>
+    </div>
     <button type="submit">Filter</button>
 </form>
-    <div th:each="user : ${users}">
+    <div th:each="user : ${users.content}">
         <a th:href="@{'/users/' + ${user.id}}" th:text="|${user.id}. ${user.username}|">User</a>
     </div>
 </body>
